# cookiecutter-shell-package

./: .editorconfig  .gitattributes  ARCHITECTURE.md  CONTRIBUTING.md  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
local_extensions/: __init__.py  functions.py
{{ cookiecutter.project_slug }}/: .gitignore  CONTRIBUTING.md  README.md  USAGE.md
{{ cookiecutter.project_slug }}/contrib/archlinux/{{ cookiecutter.package_name }}/: PKGBUILD
{{ cookiecutter.project_slug }}/contrib/archlinux/{{ cookiecutter.package_name }}-git/: PKGBUILD
{{ cookiecutter.project_slug }}/contrib/archlinux/{{ cookiecutter.package_name }}-local/: PKGBUILD
{{ cookiecutter.project_slug }}/debian/: control  install  {{ cookiecutter.package_name }}.manpages
{{ cookiecutter.project_slug }}/debian/local/: binstub
{{ cookiecutter.project_slug }}/doc/sphinx/: conf.py
{{ cookiecutter.project_slug }}/libexec/: constants.bash  version.bash  {{ cookiecutter.first_executable_name }}.bash
