[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
files = "local_extensions/**/*.py"
implicit_reexport = false
mypy_path = "scripts/stubs"
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.poetry]
name = "cookiecutter-shell-package"
version = "0.1.0"
description = "Cookiecutter template for generating shell script projects"
authors = ["Claudia Pellegrino <clau@tiqua.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
# We’re pinning Python to an exact minor version for compatibility.
# Keep this number in sync with the minimum Python version
# Cookiecutter supports.
python = "~3.7.0"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
#
# We’re developing a Cookiecutter template, not a Python package.
# But we’re maintaining a `pyproject.toml` nonetheless because we
# want the benefit of improved IDE support while working on the
# local Jinja extensions.
#
# We’re pinning both the major and minor version for compatibility.
# Keep this in sync with the requirement mentioned in README.md.
cookiecutter = "~2.1.0"
mypy = "^1.0.1"
poethepoet = "^0.16.0"
#
# We’re pinning pylint to a legacy minor version for compatibility
# with the minimum Python version Cookiecutter supports.
# Keep this number in sync with respect to that.
pylint = "^2.13.9"

# Keep these version numbers in sync with Cookiecutter’s `setup.py`.
[tool.poetry.group.provided.dependencies]
binaryornot = ">=0.4.4"
jinja2 = ">=2.7, <4.0.0"
click = ">=7.0,<9.0.0"
pyyaml = ">=5.3.1"
jinja2-time = ">=0.2.0"
python-slugify = ">=4.0.0"
requests = ">=2.23.0"

[tool.poe]
verbosity = -1

[tool.poe.tasks]
tasks.cmd = "poetry run poe -v"
tasks.help = "List available tasks"
linter.cmd = "pylint --enable-all-extensions local_extensions"
linter.help = "Check for style violations"
typecheck.cmd = "mypy"
typecheck.help = "Run static type checker"
